--- a/childgames-quiz/MainWindow.xaml
+++ b/childgames-quiz/MainWindow.xaml
@@ -1,13 +1,11 @@
 ﻿<Window x:Class="ChildGamesQuiz.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="MainWindow" Height="442" Width="525" Loaded="Window_Loaded">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="MainWindow" Height="442" Width="600" Loaded="Window_Loaded">
     <DockPanel >
         <GroupBox Header="Ответ" Name="AnswerGroupBox" DockPanel.Dock="Bottom">
             <StackPanel Orientation="Vertical">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Label Content="Введен неправильный ответ" Height="28" HorizontalAlignment="Center" Name="ErrorLabel"  FontWeight="Bold" Foreground="Red" Visibility="Visible"/>
-                    <Label Content="" Height="28" HorizontalAlignment="Center" Name="TimeLabel"  FontWeight="Bold" Foreground="Red" Visibility="Visible"/>
-                </StackPanel>
+                <Label Content="Введен неправильный ответ. Есть подозрение, что вы не являетесь человеком." Height="28" HorizontalAlignment="Center" Name="ErrorLabel"  FontWeight="Bold" Foreground="Red" Visibility="Collapsed"/>
+                <Label Content="" Height="28" HorizontalAlignment="Center" Name="TimeLabel"  FontWeight="Bold" Foreground="Red" Visibility="Collapsed"/>
                 <DockPanel LastChildFill="True">
                     <Button Content="Проверить" Height="23" Name="button1" Width="75" Click="button1_Click" IsDefault="True"  DockPanel.Dock="Right"/>
                     <TextBox Height="23" Name="AnswerTextBox" />
